# serde-kv

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
benches/: kv.rs
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: flatten.rs  flatten_typed.rs  hashmap.rs  proptest.rs  table.rs
