[package]
name = "serde-kv"
version = "0.1.0"
edition = "2024"
description = "A serde data format for flat key=value lines (e.g. `foo=bar baz=42`)."
authors = ["Austin Poor <45295232+a-poor@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/a-poor/serde-kv"
documentation = "https://docs.rs/serde-kv"
readme = "README.md"
keywords = ["serde", "kv", "key-value", "parser", "serialization"]
categories = ["encoding", "parsing"]

[dependencies]
serde = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
serde = { version = "1", features = ["std", "derive"] }
proptest = "1"
criterion = "0.5"

[[bench]]
name = "kv"
harness = false
